--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 ### @author <a href="https://github.com/liyupi">程序员鱼皮</a> ###
 ### @from <a href="https://wjp.icu">编程导航知识星球</a> ###
 
+application-local.yml
+application-prod.yml
+
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
